--- a/client/src/index.css
+++ b/client/src/index.css
@@ -76,6 +76,24 @@ header ul li span {
   
 }
 
+/* <------------- EVENTS PAGE --------------> */
+
+.Events {
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+}
+
+.Events .latest_stream {
+  width: 100vw;
+  height: 50%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
 /* <------------- FOOTER --------------> */
 footer {
   width: 100vw;
