--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,15 @@
-/* <------------- UNIVERSAL --------------> */
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wdth,wght@0,75..100,300..800;1,75..100,300..800&family=Oswald:wght@200..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+
+/* font-family: "Dancing Script", cursive; */
+/* font-family: "Open Sans", system-ui; */
+
+:root {
+  --text: #453c38;
+  --background: #fbfbfb;
+  --primary: #896149;
+  --secondary: #c2a188;
+  --accent: #7d5446;
+}
 
 * {
   margin: 0px;
@@ -10,237 +20,173 @@
   scroll-behavior: smooth;
 }
 
-/* <------------- BODY --------------> */
 body {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  cursor: default;
-  font-family: "Oswald", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Open Sans", system-ui;
+  background-color: var(--background);
 }
 
-
-/* <------------- HEADER --------------> */
-header {
-  width: 100vw;
-  height: 3.5rem;
-  display: flex;
-  align-items: center;
-  background-color: #023e8a;
+.page {
+  width: 80%;
+  margin: 0px auto;
+  height: auto;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
-header ul {
-  width: 100vw;
+.header {
+  width: 100%;
+  height: 70px;
+  background-color: var(--background);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  overflow: hidden;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0px 2rem;
 }
 
-header ul li {
-  margin: 0px 10px;
-  color: #fcfcfc;
+.header p {
+  font-size: 2rem;
+  font-family: "Dancing Script", cursive;
 }
 
-header ul li img {
-  cursor: pointer;
-  color: #fcfcfc;
+.header .header_logo {
+  height: 100%;
+  width: auto;
 }
 
-header ul li span {
-  font-size: 30px;
+/* Navbar */
+nav {
+  height: 60px;
+  width: 100%;
+  background-color: var(--background);
+  position: fixed;
+  top: 70px;
+  left: 0;
+  border-bottom: 4px solid var(--primary);
 }
-
-
-/* <------------- NAVBAR --------------> */
-.navbar ul {
-  width: 100vw;
-  height: 3rem;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: #0096c7;
-  cursor: default;
-}
-
-.navbar ul li {
-  margin: 0px 25px;
-  padding: 9.5px 40px;
-  font-size: 20px;
-  color: #fcfcfc;
-  transition: background-color 350ms ease-in-out, padding 350ms ease-in-out;
-}
-
-.navbar ul li:hover {
-  background-color: #023d8abd;
-  padding: 9.5px 90px;
-
-}
-
-/* <------------- EVENTS PAGE --------------> */
-
-.Events {
-  width: 100vw;
-  height: 100vh;
-  background-color: red;
-}
-
-.Events .latest_stream {
-  height: auto;
-  background-color: white;
-}
-
-.Events .latest_stream .ytchannel {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: x-large;
-}
-
-.Events .latest_stream h4 {
-  font-size: 30px;
-}
-
-.Events .latest_stream h4 a {
-  text-decoration: none;
-  color: #171717;
-} 
-
-.Events .latest_stream h4 a:hover{
-  color: #cc0007
-} 
-
-.Events .latest_stream h4 a:active{
-  color: #171717
-} 
-
-.Events .latest_stream .ytlink {
-  display: flex;
-}
-
-.Events .latest_stream .ytlink iframe{
-  padding: 10px;
-  border-style: none;
-}
-
-.Events .latest_stream .ytlink .background{
-  background-color: orange;
-}
-
-.Events .latest_stream .ytlink  p{
-  background-color: pink;
-}
-
-
-/* <------------- LOGO --------------> */
 
 .logo {
-  width: 10px;
-  height: 10px;
-  background-color: blue;
-  position: relative;
-  z-index: 5;
+  height: 100%;
+  width: auto;
+  float: left;
+  margin: 0px 2rem;
+  display: none;
 }
 
-.logo img {
-  position: relative;
-  z-index: 100;
-}
-
-/* <------------- FOOTER --------------> */
-footer {
-  width: 100vw;
-  Height: 8rem;
-  position: relative;
-  bottom: 0px;
+nav ul {
+  height: 100%;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
-  row-gap: 7px;
-  background-color: #171717;
-  color: #fcfcfc;
+  background-color: var(--primary);
 }
 
-/* ContactUs.css */
-
-.contact {
-  display: flex;
-  flex-direction: row;
-  gap: 20px;
-  height: auto;
-  min-height: 100vh;
+nav ul li {
+  display: inline-block;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-}
-
-li {
-  flex: 1;
-}
-
-.map {
-  width: 60%;
-  padding: 2rem;
-}
-
-.mail {
-  width: 40%;
-  padding: 2rem;
-}
-
-.mail h4 {
-  font-size: 1.2rem;
-  font-weight: normal;
-  margin-bottom: 1rem;
-}
-
-iframe {
-  width: 100%;
-  height: 80%;
-  border: 0;
-  border-radius: 10px;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-
-input[type="text"],
-input[type="email"],
-textarea {
-  width: 100%;
-  padding: 8px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-textarea {
-  resize: vertical;
-  min-height: 100px;
-}
-
-input[type="submit"] {
+nav ul li a {
+  font-size: 1.1rem;
+  margin-right: 12px;
   padding: 10px;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  border-radius: 4px;
+  color: var(--background);
+  font-weight: 600;
+  letter-spacing: 1.1px;
+}
+
+.checkbtn {
+  color: var(--primary);
+  font-size: 30px;
+  float: right;
+  margin: 14px 20px 0px 20px;
   cursor: pointer;
+  display: none;
 }
 
-input[type="submit"]:hover {
-  background-color: #45a049;
+.overlay {
+  display: none;
 }
 
-.msg {
-  color: red;
-  font-size: 1.2em;
+#check {
+  display: none;
+}
+
+@media screen and (max-width:972px) {
+  .nav_logo {
+    display: block;
+    background-color: red;
+  }
+
+  nav ul {
+    flex-direction: column;
+    position: absolute;
+    height: auto;
+    width: 40%;
+    margin: 0px 0px;
+    top: 80px;
+    right: -40%;
+    text-align: center;
+    background-color: var(--primary);
+    transition: all 0.6s ease-out;
+    z-index: 1000;
+    box-shadow: inset 2px 2px 5px 1px var(--primary), inset -2px -2px 40px 1px var(--primary);
+    border-radius: 5px;
+    z-index: 2;
+  }
+
+  nav ul li {
+    display: block;
+    line-height: 4rem;
+  }
+
+  nav ul li a {
+    font-size: 1.2rem;
+  }
+
+  .checkbtn {
+    display: inline-block;
+  }
+
+  .overlay {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+  }
+
+  #check:checked~ul {
+    right: 10px;
+  }
+
+  #check:checked~.overlay {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  nav ul {
+    width: 70%;
+    right: -70%;
+  }
+}
+
+/* Footer */
+footer {
+  width: 100%;
+  height: auto;
+  margin: 20px auto;
+  background-color: var(--text);
+  padding: 2rem;
 }
