--- a/client/src/index.css
+++ b/client/src/index.css
@@ -227,3 +227,76 @@ footer {
   background-color: var(--text);
   padding: 2rem;
 }
+
+
+/* Contact Us */
+.contact_page {
+  width: 80%;
+  height: auto;
+  display: flex;
+  align-items: center;
+}
+
+.contact_page .map {
+  width: 60%;
+  height: 70vh;
+}
+
+.contact_page .map iframe {
+  width: 100%;
+  height: 100%;
+}
+
+.contact_page .mail {
+  width: 40%;
+  padding: 20px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.contact_page .mail form {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+  width: 100%;
+}
+
+.contact_page .mail form input,
+.contact_page .mail form textarea {
+  padding: 4px 10px;
+}
+
+.contact_page .mail form textarea {
+  height: 100px;
+}
+
+.contact_page .mail form .btn {
+  padding: 10px 0px;
+}
+
+
+.contact_page .mail form input[type="text"],
+.contact_page .mail form input[type="email"],
+.contact_page .mail form input[type="password"],
+.contact_page .mail form textarea {
+  font-size: 0.8rem;
+  outline-color: var(--primary);
+}
+
+@media screen and (max-width:972px) {
+  .contact_page {
+    flex-direction: column;
+    gap: 40px;
+  }
+
+  .contact_page .map,
+  .contact_page .mail {
+    width: 80%;
+  }
+
+  .contact_page .mail {
+    padding: 0px;
+  }
+}
