--- a/client/src/index.css
+++ b/client/src/index.css
@@ -249,10 +249,12 @@ footer {
 
 .contact_page .mail {
   width: 40%;
+  height: 70vh;
   padding: 20px 40px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
 }
 
 .contact_page .mail form {
@@ -300,3 +302,106 @@ footer {
     padding: 0px;
   }
 }
+
+/* About Us */
+.about_page {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.about_component {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 2rem 0px;
+  width: 100%;
+}
+
+.about_component:nth-child(odd) .content {
+  order: 1;
+  flex: 1;
+  margin-right: 1rem;
+}
+
+.about_component:nth-child(odd) .img_container {
+  order: 2;
+  flex: 1;
+}
+
+.about_component:nth-child(even) .content {
+  order: 2;
+  flex: 1;
+  margin-left: 1rem;
+}
+
+.about_component:nth-child(even) .img_container {
+  order: 1;
+  flex: 1;
+}
+
+.img_container {
+  flex: 1;
+  max-width: 50%;
+}
+
+.img {
+  width: 100%;
+  height: auto;
+}
+
+.desc {
+  font-size: 1rem;
+  line-height: 1.6;
+}
+
+/* Responsive styles */
+@media (max-width: 768px) {
+  .about_component {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .about_component:nth-child(odd) .content {
+    order: 2;
+    margin-right: 0;
+    margin-bottom: 1rem;
+  }
+
+  .about_component:nth-child(odd) .img_container {
+    order: 1;
+    margin-bottom: 1rem;
+  }
+
+  .about_component:nth-child(even) .content {
+    order: 1;
+    margin-left: 0;
+    margin-bottom: 1rem;
+  }
+
+  .about_component:nth-child(even) .img_container {
+    order: 2;
+    margin-bottom: 1rem;
+  }
+
+  .img_container {
+    max-width: 100%;
+  }
+  
+  .our_vision {
+    flex-direction: column-reverse;
+  }
+}
+
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 1.5rem;
+  }
+  
+  .desc {
+    font-size: 0.875rem;
+  }
+}
+
