--- a/client/src/index.css
+++ b/client/src/index.css
@@ -571,3 +571,13 @@ nav ul li a {
   font-weight: 400;
   font-size: 1.2rem;
 }
+
+@media screen and (max-width: 972px) {
+  a {
+    cursor: default;
+  }
+
+  * {
+    cursor: default;
+  }
+}
